--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html (REVISED) -->
 <!doctype html>
 <html lang="ja">
 <head>
@@ -13,55 +12,27 @@
     <section id="screen-entrance" class="screen is-active" aria-label="入口">
       <div class="paper">
         <header class="paper__header">
-          <h1 class="paper__title">ようこそ。</h1>
+          <h1 class="paper__title">ようこそ</h1>
           <p class="paper__lead">
-            ワンダーランドへの扉を開けるためには鍵が必要です。<br/>
-            あなた宛の招待状を読んで、扉を開けよう。
+            あなた宛の「招待状」を読んで、扉を開けよう<br/>
+            ワンダーランドを目指して…
           </p>
-
-          <div class="rule">
-            <p class="rule__title">指示</p>
-            <p class="rule__text">
-              扉を開けるには、<strong>3文字のパスワード</strong>が必要です。<br/>
-              <strong>記号は使えません。</strong>
-            </p>
-          </div>
         </header>
 
-        <!-- Letter -->
-        <section class="paper__letter" aria-label="招待状（紙切れ）">
-          <div class="letter">
-            <div class="letter__stamp">✶</div>
-            <pre id="acrosticText" class="letter__text" aria-label="英語の走り書き"></pre>
-            <div class="letter__note">（先頭にだけ、影が落ちる）</div>
+        <!-- Notice box (reconstructed from old instruction/letter area) -->
+        <section class="paper__notice" aria-label="注意事項">
+          <div class="notice">
+            <h2 class="notice__title">注意</h2>
+            <div class="notice__body">
+              <p>この先から謎解きが始まります。</p>
+              <p>謎解きは期間中同一内容で行いますので、ネタバレ投稿等は無しでお願いいたします。</p>
+              <p>この物語はフィクションです。</p>
+              <p>すべてお手元のスマートフォンなどでお楽しみいただけます。</p>
+              <p class="notice__spacer"></p>
+              <p>なお、本プログラムは難易度が非常に高くなっております。</p>
+              <p>ぜひ皆様で協力して解き進めてください。</p>
+            </div>
           </div>
-
-          <!-- MM/DD diagram pinned on bottom-right (responsive: moves under on small screens) -->
-          <aside class="diagram" aria-label="MM/DDの図">
-            <div class="diagram__card">
-              <div class="diagram__title">MM/DD</div>
-              <div class="diagram__row">
-                <span class="diagram__box">0</span><span class="diagram__box">2</span>
-                <span class="diagram__slash">/</span>
-                <span class="diagram__box">2</span><span class="diagram__box">7</span>
-              </div>
-              <div class="diagram__arrow">↓</div>
-              <div class="diagram__title diagram__title--small">mm/d</div>
-
-              <!-- Hidden annotations (revealed when hint is opened) -->
-              <div id="diagramHints" class="diagram__hints" hidden>
-                <div class="diagram__hint">mm = 月をもう一度</div>
-                <div class="diagram__hint">d = 日は一桁だけ</div>
-              </div>
-            </div>
-
-            <!-- subtle "calculator" texture: blends into paper -->
-            <div class="calc-ghost" aria-hidden="true">
-              <div class="calc-ghost__keys">
-                <span>+</span><span>−</span><span>×</span><span>÷</span><span>=</span>
-              </div>
-            </div>
-          </aside>
         </section>
 
         <!-- Password input -->
@@ -76,34 +47,21 @@
                 inputmode="numeric"
                 autocomplete="one-time-code"
                 maxlength="3"
-                placeholder="例：123"
+                placeholder=""
                 aria-describedby="pwHelp"
               />
-              <button id="unlockBtn" class="btn btn--primary" type="button">UNLOCK</button>
+              <button id="unlockBtn" class="btn btn--primary unlock__button" type="button">UNLOCK</button>
             </div>
-            <div id="pwHelp" class="unlock__help">※数字3ケタのみ（記号不可）</div>
+            <div id="pwHelp" class="unlock__help"></div>
             <div id="pwMsg" class="unlock__msg" role="status" aria-live="polite"></div>
           </div>
-        </section>
-
-        <!-- Hints (2 levels) -->
-        <section class="paper__hints" aria-label="ヒント">
-          <details class="hint" id="hint1">
-            <summary>ヒント1</summary>
-            <p id="hintText1"></p>
-          </details>
-
-          <details class="hint" id="hint2">
-            <summary>ヒント2</summary>
-            <p id="hintText2"></p>
-          </details>
         </section>
 
         <footer class="paper__footer">
           <div class="stars">☆☆☆</div>
         </footer>
 
-        <!-- Small reset (for your testing) -->
+        <!-- Small reset (for testing) -->
         <button id="resetBtn" class="reset" type="button" aria-label="進捗リセット">RESET</button>
       </div>
     </section>
@@ -118,7 +76,7 @@
     </section>
   </main>
 
-  <!-- Audio (must be triggered by user gesture; we play on unlock click) -->
+  <!-- Audio -->
   <audio id="doorAudio" preload="auto">
     <source src="./assets/door-open.mp3" type="audio/mpeg" />
   </audio>
